--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        model: [ "G970F,G973F,G975F", "N970F,N975F" ]
+        model: [ "G973F" ]
 
     steps:
       - uses: actions/checkout@v2
@@ -26,9 +26,9 @@ jobs:
           set -e -o pipefail
           ./cruelbuild config                    \
                        model=${{ matrix.model }} \
-                       name="Cruel-v4.2"         \
+                       name="Cruel-v4.6_dani"    \
                        toolchain=$TOOLCHAIN      \
-                       +magisk                   \
+                       +magisk=canary            \
                        +nohardening              \
                        +ttl                      \
                        +wireguard                \
@@ -38,6 +38,13 @@ jobs:
                        +force_dex_wqhd           \
                        +morosound                \
                        +boeffla_wl_blocker       \
+                       +sched_conservative       \
+                       +sched_ondemand           \
+                       +fp_boost                 \
+                       +size                     \
+                       +performance              \
+                       +io_zen                   \
+                       +io_maple                 \
           2>&1 | tee config.info
 
       - name: Install gcc-aarch64-linux-gnu
