feat: pmos kernel compatibility
Add needed kernel options for PostmarketOS

--- a/kernel/configs/cruel.conf
+++ b/kernel/configs/cruel.conf
@@ -32,3 +32,9 @@ CONFIG_SECURITY_SELINUX_SWITCH=y
 # CONFIG_EXYNOS_NPU_PUBLISH_NPU_BUILD_VER is not set
 # CONFIG_VISION_UNITTEST is not set
 # CONFIG_CRYPTO_TEST is not set
+CONFIG_ANDROID_PARANOID_NETWORK=n
+CONFIG_SAMSUNG_TUI=n
+CONFIG_SYSVIPC=y
+CONFIG_TZDEV=n
+CONFIG_VT=y
+CONFIG_USER_NS=y
