--- a/kernel/configs/cruel.conf
+++ b/kernel/configs/cruel.conf
@@ -36,10 +36,7 @@ CONFIG_ANDROID_PARANOID_NETWORK=n
 CONFIG_SAMSUNG_TUI=n
 CONFIG_SYSVIPC=y
 CONFIG_TZDEV=n
-CONFIG_VT=y
+CONFIG_VT=n
 CONFIG_USER_NS=y
 CONFIG_MST_TEEGRIS=n
-CONFIG_ESE_P3_LSI=n
-CONFIG_SEC_NFC=n
-CONFIG_NFC=n
 CONFIG_FIVE=n
