fix: turn CONFIG_VT back on

--- a/kernel/configs/cruel.conf
+++ b/kernel/configs/cruel.conf
@@ -36,7 +36,7 @@ CONFIG_ANDROID_PARANOID_NETWORK=n
 CONFIG_SAMSUNG_TUI=n
 CONFIG_SYSVIPC=y
 CONFIG_TZDEV=n
-CONFIG_VT=n
+CONFIG_VT=y
 CONFIG_USER_NS=y
 CONFIG_MST_TEEGRIS=n
 CONFIG_FIVE=n
