--- a/arch/arm64/boot/dts/exynos/exynos9820.dts
+++ b/arch/arm64/boot/dts/exynos/exynos9820.dts
@@ -5313,7 +5313,7 @@
 					type = "ext4";
 					mnt_flags = "ro";
 					fsmgr_flags = "wait";
-					status = "disabled";
+					status = "okay";
 				};
 
 				vendor {
